--- a/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/Properties/launchSettings.json
+++ b/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:5167",
+      "applicationUrl": "http://localhost:5214",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -14,7 +14,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7260;http://localhost:5167",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7059;http://localhost:5214",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
