Add development environment configuration settings
Added connection strings for SQL Server and Azure Storage in `appsettings.Development.json`. This update enables local development flexibility with necessary service configurations.

--- a/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/appsettings.Development.json
+++ b/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/appsettings.Development.json
@@ -1,4 +1,11 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Initial Catalog=video-processing-sql-server-dev;User ID=sa;Password=blueScreen666;TrustServerCertificate=True;MultiSubnetFailover=True"
+  },
+  "AzureStorageSettings": {
+    "ConnectionString": "UseDevelopmentStorage=true;DevelopmentStorageProxyUri=http://host.docker.internal",
+    "ContainerName": "fiap-video-processing-dev"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
