Add Serilog configuration to appsettings files
Introduced Serilog configurations for logging in both production and development environments. This includes log level settings, output destinations (console and Seq), and filters to exclude health and metrics endpoints.

--- a/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/appsettings.Production.json
+++ b/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/appsettings.Production.json
@@ -1,10 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Initial Catalog=video-processing-sql-server-dev;User ID=sa;Password=blueScreen666;TrustServerCertificate=True;MultiSubnetFailover=True"
+    "DefaultConnection": ""
   },
   "AzureStorageSettings": {
-    "ConnectionString": "UseDevelopmentStorage=true;DevelopmentStorageProxyUri=http://host.docker.internal",
-    "ContainerName": "fiap-video-processing-dev"
+    "ConnectionString": "",
+    "ContainerName": "fiap-video-processing-prd"
   },
   "Logging": {
     "LogLevel": {
