Set a static SA password in compose.yaml for MSSQL container
Replaced the environment variable for the SA password with a static value ("blueScreen666"). This simplifies local deployment but may pose a security risk if used in production environments.

--- a/compose.yaml
+++ b/compose.yaml
@@ -32,7 +32,7 @@ services:
     image: mcr.microsoft.com/mssql/server:2022-latest
     environment:
       - ACCEPT_EULA=Y
-      - MSSQL_SA_PASSWORD=${MSSQL_SA_PASSWORD}
+      - MSSQL_SA_PASSWORD=blueScreen666
     ports:
       - "1433:1433"
     volumes:
