--- a/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/Postech.Fiap.Hackathon.VideoProcessing.WebApi.csproj
+++ b/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/Postech.Fiap.Hackathon.VideoProcessing.WebApi.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="MediatR" Version="12.4.1"/>
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.3"/>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.3">
             <PrivateAssets>all</PrivateAssets>
