--- a/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/Postech.Fiap.Hackathon.VideoProcessing.WebApi.csproj
+++ b/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/Postech.Fiap.Hackathon.VideoProcessing.WebApi.csproj
@@ -9,13 +9,12 @@
 
     <ItemGroup>
         <PackageReference Include="Carter" Version="8.2.1"/>
-        <PackageReference Include="FluentStorage" Version="5.6.0"/>
-        <PackageReference Include="FluentStorage.Azure.Blobs" Version="5.3.0"/>
-        <PackageReference Include="FluentStorage.Azure.Queues" Version="5.2.2"/>
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0"/>
         <PackageReference Include="MediatR" Version="12.4.1"/>
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.3"/>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3"/>
+        <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.2.3"/>
+        <PackageReference Include="Microsoft.Azure.Storage.Queue" Version="11.2.3"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.3">
