Set request size limits and handle oversized requests
Configured `MultipartBodyLengthLimit` in app settings and Kestrel to limit request sizes to 500 MB. Added a middleware to handle oversized requests with proper error responses. These changes improve request validation and prevent potential server overload.

--- a/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/appsettings.Development.json
+++ b/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/appsettings.Development.json
@@ -19,6 +19,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MultipartBodyLengthLimit": 524288000,
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
