--- a/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/appsettings.Production.json
+++ b/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/appsettings.Production.json
@@ -12,6 +12,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MultipartBodyLengthLimit": 524288000,
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
