--- a/Postech.Fiap.Hackathon.VideoProcessing.WebApi.UnitsTests/Postech.Fiap.Hackathon.VideoProcessing.WebApi.UnitsTests.csproj
+++ b/Postech.Fiap.Hackathon.VideoProcessing.WebApi.UnitsTests/Postech.Fiap.Hackathon.VideoProcessing.WebApi.UnitsTests.csproj
@@ -8,6 +8,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <AssemblyAttribute Include="System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverageAttribute"/>
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="7.2.0"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="NSubstitute" Version="5.3.0"/>
@@ -25,6 +29,10 @@
 
     <ItemGroup>
         <Using Include="Xunit"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\src\Postech.Fiap.Hackathon.VideoProcessing.WebApi\Postech.Fiap.Hackathon.VideoProcessing.WebApi.csproj"/>
     </ItemGroup>
 
 </Project>
