--- a/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/appsettings.json
+++ b/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/appsettings.json
@@ -1,9 +1,61 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
+  "Azure": {
+    "ConnectionString": "",
+    "AccountName": "",
+    "AccountKey": "",
+    "Blob": {
+      "Container": "fiap-video-processing-blob-prd"
+    },
+    "Queue": {
+      "Name": "fiap-video-processing-queue-prd"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console"
+    ],
+    "MinimiumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Micrsoft": "Information",
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.EntityFrameworkCore.Database": "Information"
+      }
+    },
+    "Filter": [
+      {
+        "Name": "ByExcluding",
+        "Args": {
+          "expression": "Contains(RequestPath, '/health')",
+          "m": "logEvent.Properties.ContainsKey('RequestPath')"
+        }
+      },
+      {
+        "Name": "ByExcluding",
+        "Args": {
+          "expression": "Contains(RequestPath, '/metrics') and @l = 'Information'",
+          "m": "logEvent.Properties.ContainsKey('RequestPath')"
+        }
+      }
+    ],
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+          "outputTemplate": "[{Timestamp:dd/MM/yyyy HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "FromGlobalLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ]
+  }
 }
