--- a/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/appsettings.Production.json
+++ b/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/appsettings.Production.json
@@ -2,21 +2,21 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
-  "AzureStorageSettings": {
+  "Azure": {
     "ConnectionString": "",
-    "ContainerName": "fiap-video-processing-prd"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "AccountName": "",
+    "AccountKey": "",
+    "Blob": {
+      "Container": "fiap-video-processing-blob-prd"
+    },
+    "Queue": {
+      "Name": "fiap-video-processing-queue-prd"
     }
   },
-  "MultipartBodyLengthLimit": 524288000,
+  "AllowedHosts": "*",
   "Serilog": {
     "Using": [
-      "Serilog.Sinks.Console",
-      "Serilog.Sinks.Seq"
+      "Serilog.Sinks.Console"
     ],
     "MinimiumLevel": {
       "Default": "Information",
@@ -48,12 +48,6 @@
         "Args": {
           "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
           "outputTemplate": "[{Timestamp:dd/MM/yyyy HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
-        }
-      },
-      {
-        "Name": "Seq",
-        "Args": {
-          "serverUrl": "http://localhost:5341"
         }
       }
     ],
