Add Azure health checks for SQL, Blob, and Queue Storage
Integrated health checks for Azure SQL Server, Blob Storage, and Queue Storage with appropriate tags to enhance service monitoring. Updated project dependencies to include required health check packages.

--- a/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/Postech.Fiap.Hackathon.VideoProcessing.WebApi.csproj
+++ b/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/Postech.Fiap.Hackathon.VideoProcessing.WebApi.csproj
@@ -8,6 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AspNetCore.HealthChecks.AzureStorage" Version="7.0.0"/>
+        <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="9.0.0"/>
         <PackageReference Include="Carter" Version="8.2.1"/>
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0"/>
         <PackageReference Include="MediatR" Version="12.4.1"/>
