--- a/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/appsettings.json
+++ b/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/appsettings.json
@@ -7,16 +7,23 @@
     "AccountName": "",
     "AccountKey": "",
     "Blob": {
-      "Container": "fiap-video-processing-blob-prd"
+      "Container": ""
     },
     "Queue": {
-      "Name": "fiap-video-processing-queue-prd"
+      "Name": ""
     }
   },
-  "AllowedHosts": "*",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "MultipartBodyLengthLimit": 524288000,
   "Serilog": {
     "Using": [
-      "Serilog.Sinks.Console"
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Seq"
     ],
     "MinimiumLevel": {
       "Default": "Information",
@@ -48,6 +55,12 @@
         "Args": {
           "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
           "outputTemplate": "[{Timestamp:dd/MM/yyyy HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341"
         }
       }
     ],
