Update production blob and queue names in appsettings
Set proper production values for the blob container and queue names in the appsettings.json file. This change ensures that the application correctly connects to the designated production resources.

--- a/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/appsettings.json
+++ b/src/Postech.Fiap.Hackathon.VideoProcessing.WebApi/appsettings.json
@@ -7,10 +7,10 @@
     "AccountName": "",
     "AccountKey": "",
     "Blob": {
-      "Container": ""
+      "Container": "fiap-video-processing-blob-prd"
     },
     "Queue": {
-      "Name": ""
+      "Name": "fiap-video-processing-queue-prd"
     }
   },
   "Logging": {
