Remove code coverage collection from test command
The `--collect:"XPlat Code Coverage"` and `--settings coverlet.runsettings` options were removed from the test step in the deploy workflow. This simplifies the testing process and reduces unnecessary overhead during deployment.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: 🧪 Rodar testes
         run: |
-          dotnet test ${{ env.TEST_PROJECT }} --configuration Release --no-build --collect:"XPlat Code Coverage" --settings coverlet.runsettings
+          dotnet test ${{ env.TEST_PROJECT }} --configuration Release --no-build
 
       - name: 🏷️ Definir tag da imagem Docker (SHA curto)
         id: docker_tag
