Update Kubernetes cluster name in deploy workflow
Renamed the cluster from 'fiap-hackathon-aks' to 'fiap-hackathon-k8s-cluster' in the GitHub Actions deploy workflow. This ensures consistency with the new cluster naming convention.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ env:
 
   # Configurações do Kubernetes
   RESOURCE_GROUP: 'rg-fiap-hackathon'
-  CLUSTER_NAME: 'fiap-hackathon-aks'
+  CLUSTER_NAME: 'fiap-hackathon-k8s-cluster'
   K8S_NAMESPACE: 'fiap-hackathon'
   HELM_CHART_PATH: './charts/webapi/'
 
