Update ingress host to Azure domain
Changed the ingress host from fiap-hackathon-webapi.com.br to fiap-hackathon-api.eastus.cloudapp.azure.com. This ensures compatibility with the new deployment environment.

--- a/charts/webapi/templates/ingress.yaml
+++ b/charts/webapi/templates/ingress.yaml
@@ -29,7 +29,7 @@ metadata:
 spec:
   ingressClassName: {{ .Values.ingress.className | default "nginx" }}
   rules:
-    - host: fiap-hackathon-webapi.com.br
+    - host: fiap-hackathon-api.eastus.cloudapp.azure.com
       http:
         paths:
           - path: /
