Enable deployment workflow on closed pull requests to main
This update ensures the deployment workflow triggers when a pull request to the main branch is closed. It adds flexibility for automated deployments, improving CI/CD efficiency.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,10 @@ on:
       - 'feature/**'
       - 'develop'
       - 'main'
+  pull_request:
+    branches:
+      - main
+    types: [closed]
   workflow_dispatch:
 
 permissions:
